# weather_api

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile
src/: alembic.ini  pyproject.toml  setup.cfg
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2021_10_20_014312_add_weather_data_table.py
src/tests/: conftest.py  test_settings.py  test_status.py
src/tests/fixtures/: fakers.py  models.py  online_weather.py
src/tests/test_api/: test_status.py  test_weather.py
src/tests/test_api/weather/: test_repositories.py  test_routes.py
src/tests/weather/: test_models.py  test_repositories.py  test_routes.py
src/weather/: __init__.py  app_builder.py  main.py  settings.py
src/weather/database/: __init__.py  dependencies.py  mixins.py  models.py  session.py
src/weather/status/: __init__.py  routes.py
src/weather/utils/: wind_scale.py
src/weather/weather/: __init__.py  abstract_repository.py  adapters.py  models.py  repositories.py  routes.py  schemas.py  service.py
