[tool.poetry]
name = "weather"
version = "0.2.0"
description = ""
authors = ["Ariel Carvajal <arie.cbpro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

# server
hypercorn = { extras = ["uvloop"], version = "^0.16.0" }
uvloop = "~=0.19.0"

# web framework
fastapi = "^0.110.3"

# configurations
python-dotenv = "^1.0.1"

# database
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
# asyncpg = "~=0.24.0"
pydantic = { extras = ["dotenv"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"

# utilities
requests = "^2.31.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
# linting
flake8 = "^7.0.0"   
flake8-quotes = "^3.4.0"
# mypy = "^0.910"

# testing
pytest = "^8.2"
coverage = "^7.5"
pytest-cov = "^5.0"
# pytest-xdist = "^2.3"
# pytest-asyncio = "^0.15"

# data and mocking
faker = "^25.0"
responses = "^0.25"

# debugger
debugpy = "^1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
