[tool.poetry]
name = "weather"
version = "0.2.1"
description = ""
authors = ["Ariel Carvajal <arie.cbpro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

# server
hypercorn = { extras = ["uvloop"], version = "^0.16.0" }
uvloop = "~=0.19.0"

# web framework
fastapi = "^0.110.3"

# database
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# serialization
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

# utilities
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
# testing
pytest = "^8.2"
coverage = "^7.5"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23.6"
# pytest-xdist = "^2.3"

# data and mocking
faker = "^25.0"
respx = "^0.21.1"

# debugger
debugpy = "^1.8"

[tool.poetry.group.quality.dependencies]
ruff = "^0.4.2"
# mypy = "^0.910"

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"

[tool.coverage.run]
omit = "tests/*"
branch = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "C",
    "C4",
    "E",
    "F",
    "I",
    "LOG",
    "N",
    "PL",
    "PT",
    "PYI",
    "R",
    "RET",
    "S",
    "SIM",
    "T20",
    "UP",
    "W",
]
mccabe.max-complexity = 5
isort.combine-as-imports = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
